Fix: Long node names overlapping each other

--- a/rundeckapp/grails-spa/packages/ui-trellis/theme/scss/custom/nodes-embed.scss
+++ b/rundeckapp/grails-spa/packages/ui-trellis/theme/scss/custom/nodes-embed.scss
@@ -1,7 +1,7 @@
 .nodes-embed{
 
   .embedded_node {
-    display: inline-block;
+    display: block;
     cursor: pointer;
 
     &.tight {
